# local-transcription

./: .gitignore  README.md  main.py  pyproject.toml
local_transcription/: __init__.py  __main__.py  cli.py  config.py  daemon.py  focus.py  log.py  models.py  overlay.py  recorder.py  transcriber.py  typer.py
