[project]
name = "local-transcription"
version = "0.1.0"
description = "Offline push-to-talk dictation with OpenVINO Intel Arc GPU acceleration"
requires-python = ">=3.12"
dependencies = [
    "openvino-genai>=2025.0.0",
    "numpy>=1.26.0",
    "sounddevice>=0.5.0",
    "huggingface-hub>=0.20.0",
]

[project.scripts]
local-transcription = "local_transcription.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["local_transcription"]
